# GeoRag_LCT2025

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml
app/: config.py  logging.py  main.py  models.py  repositories.py  schemas.py  storage.py
app/api/: __init__.py  routes.py
app/application/: __init__.py  depth_anything.py  exceptions.py  feature_store.py  features.py  geocoder.py  global_descriptors.py  index.py  ingestion.py  local_cache.py  matcher.py  search.py  vlm.py
app/core/: __init__.py  config.py
app/infrastructure/: __init__.py
app/infrastructure/database/: __init__.py  models.py  repositories.py  session.py
app/infrastructure/storage/: __init__.py  filesystem.py  s3.py
app/infrastructure/vector/: qdrant.py
app/infrastructure/vlm/: __init__.py  ollama.py
app/rag/: __init__.py  document_store.py  pipelines.py  service.py  utils.py
app/rag/components/: __init__.py
app/utils/: image.py
scripts/: download_moscow_mapillary.py  ingest_train_data.py  plot_point_cloud.py
